# OneLife

./: .gitignore  CLAUDE.md  PROGRESS.md
android/: AndroidManifest.xml  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  MACMINI_DEBUG_PLAN.md  REAL_DEVICE_GUIDE.md  build.sh  config.sh  test_settings.sh
android/jni/: AndroidPlatform.cpp  AndroidPlatform.h  AssetFileBridge.cpp  AssetFileBridge.h  DeviceInfo.cpp  DeviceInfo.h  EGLContext.cpp  EGLContext.h  SoftKeyboard.cpp  SoftKeyboard.h  TouchInputAdapter.cpp  TouchInputAdapter.h  android_main.cpp  game_stubs.cpp
android/res/values/: strings.xml
android/scripts/: decode-crash.sh  emulator-control.sh  test-cycle.sh
docs/superpowers/plans/: 2026-05-08-dist-build-system.md  2026-05-11-android-client-plan.md
docs/superpowers/specs/: 2026-05-08-dist-build-system-design.md  2026-05-11-android-client-design.md
gameSource/: TextField.cpp
scripts/: build-dist.sh
